--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.12",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
